--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
-    "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -56,6 +55,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
