--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "sharp": "^0.34.4",
-    "squareup": "^1.0.0",
+    "square": "^43.1.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
