--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^13.5.0",
     "lucide-react": "^0.475.0",
+    "maxrects-packer": "^2.7.3",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
