--- a/package.json
+++ b/package.json
@@ -62,14 +62,17 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "@vercel/node": "^5.4.1",
     "genkit-cli": "^1.14.1",
+    "jest": "^30.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "description": "This is a NextJS starter in Firebase Studio.",
