fix: Allow Sharp optional dependencies in Vercel build
- Remove --no-optional from install command
- Set NPM_CONFIG_OPTIONAL to true
- Sharp requires platform-specific binaries for image processing

--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,7 @@
   },
   "build": {
     "env": {
-      "NPM_CONFIG_OPTIONAL": "false",
-      "CANVAS_SKIP_INSTALL": "true"
+      "NPM_CONFIG_OPTIONAL": "true"
     }
-  },
-  "installCommand": "npm install --no-optional"
+  }
 }
