--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@deepnest/calculate-nfp": "^202503.13.155300",
     "@genkit-ai/next": "^1.14.1",
     "@google-cloud/vertexai": "^1.10.0",
     "@hookform/resolvers": "^4.1.3",
@@ -41,6 +42,7 @@
     "@square/web-payments-sdk-types": "^1.79.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "any-nest": "^1.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -48,6 +50,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.5.0",
+    "js-angusj-clipper": "^1.3.1",
     "lucide-react": "^0.475.0",
     "maxrects-packer": "^2.7.4",
     "next": "15.3.3",
