--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@deepnest/calculate-nfp": "^202503.13.155300",
     "@genkit-ai/next": "^1.14.1",
     "@google-cloud/vertexai": "^1.10.0",
+    "@google/genai": "^1.29.1",
     "@google/generative-ai": "^0.24.1",
     "@googlemaps/extended-component-library": "^0.6.14",
     "@hookform/resolvers": "^4.1.3",
