--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "11.9.1",
+    "firebase": "^12.6.0",
     "firebase-admin": "^13.5.0",
     "js-angusj-clipper": "^1.3.1",
     "lucide-react": "^0.475.0",
