--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@deepnest/calculate-nfp": "^202503.13.155300",
+    "@easypost/api": "^8.4.0",
     "@genkit-ai/next": "^1.14.1",
     "@google-cloud/vertexai": "^1.10.0",
     "@google/genai": "^1.30.0",
