--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@google/generative-ai": "^0.24.1",
     "@googlemaps/extended-component-library": "^0.6.14",
     "@hookform/resolvers": "^4.1.3",
+    "@imgly/background-removal": "^1.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
