fix: prevent 504 timeout on large orders
- Increase nesting API timeout from 30s to 60s in vercel.json
- Scale GA parameters based on item count (25-100 pop/gen)
- Add early termination when utilization reaches 90%
- Large orders (100+ items) use lighter optimization to stay under timeout

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "functions": {
+    "src/app/api/nesting/route.ts": {
+      "maxDuration": 60
+    },
+    "src/app/api/generate-gang-sheet/route.ts": {
+      "maxDuration": 60
+    },
     "src/app/api/**/*.ts": {
       "maxDuration": 30
     }
