feat: Add full abandoned cart recovery engine with automated emails and discount codes
- Created abandoned-cart-recovery.ts with:
  - 3-email sequence (reminder, discount offer, final chance)
  - Automatic discount code generation for emails 2 & 3
  - Beautiful HTML email templates
  - Configurable timing and discount percentages

- Added cron endpoint for hourly processing
- Added manual recovery email endpoint for admin
- Added Recovery Settings tab in admin panel
- Configured Vercel cron job (hourly)
- Updated admin send-recovery to use new engine with discount codes

--- a/vercel.json
+++ b/vercel.json
@@ -14,5 +14,11 @@
     "env": {
       "NPM_CONFIG_OPTIONAL": "true"
     }
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/abandoned-carts/recovery",
+      "schedule": "0 * * * *"
+    }
+  ]
 }
