--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "maxrects-packer": "^2.7.4",
     "next": "^16.0.7",
     "patch-package": "^8.0.0",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
